# ChatServer

./: .env  AsioIOServicePool.cpp  CMakeLists.txt  CSession.cpp  CSession.h  ChatServer.cpp  ChatServiceImpl.cpp  LogicSystem.cpp  LogicSystem.h  MsgNode.cpp  MsgNode.h  MySqlDao.cpp  RedisMgr.h  StatusConPool.cpp  StatusGrpcClient.cpp  config.json  const.h  data.h  interface-refactor-plan.md
proto/: message.proto
src/: CMakeLists.txt
src/app/: CMakeLists.txt  ChatServer.cpp
src/application/: CMakeLists.txt  ChatServiceImpl.cpp  ChatServiceImpl.h  HeartBeatHandler.cpp  HeartBeatHandler.h  LogicSystem.cpp  LogicSystem.h  LoginHandler.cpp  LoginHandler.h  TextChatHandler.cpp  UserCacheService.cpp  UserHandler.cpp
src/application/chat/: ChatDeliveryService.cpp  ChatDeliveryService.h  ChatHistoryHandler.cpp  ChatHistoryHandler.h  ChatMessageDao.cpp  ChatMessageDao.h  ChatMessageHandler.cpp  ChatMessageHandler.h  ChatMessageService.cpp  ChatMessageService.h  ChatQueryHandler.cpp  ChatQueryHandler.h  ChatServiceImpl.cpp  ChatServiceImpl.h  OfflineSyncService.cpp  OfflineSyncService.h  PersistWorker.cpp  PersistWorker.h  TextChatHandler.cpp  TextChatHandler.h
src/application/friend/: FriendDao.cpp  FriendDao.h  FriendHandler.cpp  FriendHandler.h
src/application/impl/: ChatMessageImpl.cpp  ChatMessageImpl.h  FileTransferImpl.cpp  FileTransferImpl.h  FriendImpl.cpp  FriendImpl.h  HeartbeatImpl.cpp  HeartbeatImpl.h  LogicSystemImpl.cpp  LogicSystemImpl.h  LoginImpl.cpp  LoginImpl.h  UserSearchImpl.cpp  UserSearchImpl.h
src/application/interface/: ChatGrpcClient.h  ChatMessage.h  FileTransfer.h  Friend.h  Heartbeat.h  IdGenerator.h  LogicSystem.h  Login.h  MySqlMgr.h  StatusGrpcClient.h  UserInfoCache.h  UserNodeRouteCache.h  UserSearch.h  UserSessionManager.h
src/application/login/: LoginHandler.cpp  LoginHandler.h  LoginRedisDao.cpp  LoginRedisDao.h
src/application/mysql/: DbSession.h  MySqlMgr.cpp  MySqlMgr.h  MySqlPool.cpp  MySqlPool.h
src/application/redis/: CacheRedisDao.cpp  CacheRedisDao.h  RedisMgr.cpp  RedisMgr.h  RedisPool.cpp  RedisPool.h  RedisSession.h
src/application/route/: UserNodeRouteCacheImpl.h
src/application/user/: HeartBeatHandler.cpp  HeartBeatHandler.h  UserCacheService.cpp  UserCacheService.h  UserDao.cpp  UserDao.h  UserHandler.cpp  UserHandler.h  UserInfoCacheImpl.cpp  UserInfoCacheImpl.h  UserMgr.cpp  UserMgr.h
src/common/: CMakeLists.txt  LogModule.h  LogicThreadPool.h  Singleton.h  ThreadPool.h  ThreadPoolMgr.cpp  ThreadPoolMgr.h  utils.cpp  utils.h
src/common/constants/: business_constants.h  error_codes.h
src/common/utils/: snowflake_id.cpp  snowflake_id.h  utils.cpp  utils.h
src/domain/: ChatMessage.h  IChatMessageRepository.h  const.h  data.h
src/domain/contract/: CacheService.h  ChatMessageRepository.h  ChatServiceClient.h  FriendRepository.h  ICacheService.h  IChatMessageRepository.h  IChatServiceClient.h  IFriendRepository.h  IStatusServiceClient.h  IUserCacheService.h  IUserRepository.h  IUserSessionManager.h  ServiceLocator.h  StatusServiceClient.h  UserInfoCache.h  UserNodeRouteCache.h  UserRepository.h  UserSessionManager.h
src/infra/base/: CMakeLists.txt  PersistWorker.cpp  PersistWorker.h  Singleton.h  SnowflakeIdGenerator.cpp  SnowflakeIdGenerator.h  ThreadPool.cpp  ThreadPoolMgr.cpp  ThreadPoolMgr.h  utils.cpp  utils.h
src/infra/cache/: CMakeLists.txt  LRUCache.h  UserInfoCacheImpl.cpp  UserInfoCacheImpl.h  UserNodeRouteCacheImpl.cpp  UserNodeRouteCacheImpl.h  UserSessionManagerImpl.cpp  UserSessionManagerImpl.h
src/infra/config/: CMakeLists.txt  ChatNodeSlotSelector.cpp  ChatNodeSlotSelector.h  ChatRuntimeConfig.cpp  ChatRuntimeConfig.h  ConfigMgr.cpp  ConfigMgr.h  NodeHeartbeat.cpp  NodeHeartbeat.h  RuntimeContext.cpp  RuntimeContext.h
src/infra/grpc/: CMakeLists.txt  ChatConPool.cpp  ChatConPool.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatGrpcClientImpl.cpp  ChatGrpcClientImpl.h  ChatGrpcServiceImpl.cpp  ChatGrpcServiceImpl.h  StatusConPool.cpp  StatusConPool.h  StatusGrpcClient.cpp  StatusGrpcClient.h  StatusGrpcClientImpl.cpp  StatusGrpcClientImpl.h
src/infra/log/: CMakeLists.txt  LOG.md  LogModule.h
src/infra/mysql/: CMakeLists.txt  DbSession.h  MySqlDao.cpp  MySqlDao.h  MySqlMgrImpl.cpp  MySqlMgrImpl.h  MySqlPool.cpp  MySqlPool.h
src/infra/net/: CMakeLists.txt  CServer.cpp  CServer.h  CSession.cpp  CSession.h  MsgNode.cpp  MsgNode.h
src/net/: AsioIOServicePool.cpp  AsioIOServicePool.h  CServer.cpp  CServer.h  CSession.cpp  CSession.h  MsgNode.cpp
tests/: CMakeLists.txt  test_utils.cpp
